force-app/main/default/objects/Batch__c/fields/Adjusted_Price_Per_Sample__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Price_Per_Sample__c</fullName>
    <formula>Collaboration_Budged_Minus_Upfront_Fee__c /  Collaboration_Samples__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Price Per Sample</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>