force-app/main/default/objects/Batch__c/fields/Biospecimen_Material__c.field-meta.xml
<CustomField>
    <fullName>Biospecimen_Material__c</fullName>
    <label>Biospecimen Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>RNA</fullName>
            </value>
            <value>
                <fullName>Protein</fullName>
            </value>
            <value>
                <fullName>Blood</fullName>
            </value>
            <value>
                <fullName>Tissue</fullName>
            </value>
            <value>
                <fullName>Cells</fullName>
            </value>
            <value>
                <fullName>Saliva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>