force-app/main/default/objects/Batch__c/fields/Collaboration_Budged_Minus_Upfront_Fee__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Budged_Minus_Upfront_Fee__c</fullName>
    <formula>Collaboration_Budget__c  - Upfront_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaboration Budged Minus Upfront Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>