force-app/main/default/objects/Batch__c/fields/Collaboration_Budget__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Budget__c</fullName>
    <formula>Collaboration_Opportunity__r.Total_Budget_Master__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaboration Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>