force-app/main/default/objects/Batch__c/fields/Collaboration_Samples__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Samples__c</fullName>
    <formula>Collaboration_Opportunity__r.Total_Samples_Master__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaboration Samples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>