force-app/main/default/objects/Batch__c/fields/Forecasted_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Date__c</fullName>
    <label>Forecasted Date</label>
    <type>Date</type>
</CustomField>