force-app/main/default/objects/Batch__c/fields/Forecasted_Number_of_Samples__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Number_of_Samples__c</fullName>
    <label>Samples Forecasted</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>