force-app/main/default/objects/Batch__c/fields/Non_Adj_Price_Per_Sample__c.field-meta.xml
<CustomField>
    <fullName>Non_Adj_Price_Per_Sample__c</fullName>
    <label>Non-Adj Price Per Sample</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>