force-app/main/default/objects/Batch__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <formula>Collaboration_Opportunity__r.Active_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>