force-app/main/default/objects/Batch__c/fields/Total_Samples_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Samples_Received__c</fullName>
    <formula>Collaboration_Opportunity__r.Total_Samples_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Samples Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>