force-app/main/default/objects/Batch__c/fields/Upfront_Fee__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Fee__c</fullName>
    <label>One-Time Fee</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>