force-app/main/default/objects/Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Forecasted_Number_of_Samples__c</columns>
    <columns>Forecasted_Date__c</columns>
    <columns>Collaboration_Opportunity__c</columns>
    <columns>Contracted_of_Samples__c</columns>
    <columns>Number_of_Samples_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Forecasted_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2023</value>
    </filters>
    <label>All</label>
</ListView>