force-app/main/default/objects/Batch__c/listViews/X2022_Sample_Estiamtes.listView-meta.xml
<ListView>
    <fullName>X2022_Sample_Estiamtes</fullName>
    <columns>NAME</columns>
    <columns>Forecasted_Date__c</columns>
    <columns>Forecasted_Number_of_Samples__c</columns>
    <columns>Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Forecasted_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2023</value>
    </filters>
    <filters>
        <field>Received__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>2022 Sample Estiamtes</label>
</ListView>