force-app/main/default/objects/Batch__c/listViews/X2023_Sample_Batch_Estimates.listView-meta.xml
<ListView>
    <fullName>X2023_Sample_Batch_Estimates</fullName>
    <columns>NAME</columns>
    <columns>Collaboration_Opportunity__c</columns>
    <columns>Biospecimen_Material__c</columns>
    <columns>Forecasted_Date__c</columns>
    <columns>Received__c</columns>
    <columns>Forecasted_Number_of_Samples__c</columns>
    <columns>Number_of_Samples_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Forecasted_Date__c</field>
        <operation>equals</operation>
        <value>LAST_FISCAL_YEAR</value>
    </filters>
    <label>2023 Sample Batch Estimates</label>
</ListView>